<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zion_components</name>
  <version>0.1.0</version>
  <description>Zion components package</description>
  <maintainer email="nimicu21@gmail.com">nimrod</maintainer>
  <license>Apache License 2.0</license>
<url type="repository">https://github.com/nimiCurtis/zion_components.git</url>

<!-- Declare ROS2 package build tool -->
  	<buildtool_depend>ament_cmake</buildtool_depend>
	
<!-- Declares packages name that is required at build time -->
	<build_depend>libpcl-all-dev</build_depend>
	<build_depend>rclcpp</build_depend>
	<build_depend>rclcpp_components</build_depend>
	<build_depend>rcutils</build_depend>
	<build_depend>builtin_interfaces</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
  	<build_depend>zion_msgs</build_depend>
	<build_depend>tf2</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>tf2_geometry_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<depend>eigen</depend>

<!-- Declares ROS2 package name that is required at executaion time -->
  	<exec_depend>launch_ros</exec_depend>
	<exec_depend>rclcpp</exec_depend>
	<exec_depend>rclcpp_components</exec_depend>
	<exec_depend>rcutils</exec_depend>
	<exec_depend>builtin_interfaces</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>tf2</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<exec_depend>tf2_geometry_msgs</exec_depend>
	<exec_depend>visualization_msgs</exec_depend>
	<exec_depend>zion_msgs</exec_depend>


<!-- pcl exec depend -->
	<exec_depend>libpcl-common</exec_depend>
	<exec_depend>libpcl-features</exec_depend>
	<exec_depend>libpcl-filters</exec_depend>
	<exec_depend>libpcl-io</exec_depend>
	<exec_depend>libpcl-segmentation</exec_depend>
	<exec_depend>libpcl-surface</exec_depend>
	<exec_depend>libpcl-sample_consensus</exec_depend>


<!-- Declare ROS2 package testing tools -->
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_cmake_copyright</test_depend>
	<test_depend>ament_cmake_cppcheck</test_depend>
	<test_depend>ament_cmake_lint_cmake</test_depend>
	<test_depend>ament_cmake_pep257</test_depend>
	<test_depend>ament_cmake_uncrustify</test_depend>
	<test_depend>ament_cmake_xmllint</test_depend>
  	<test_depend>ament_lint_common</test_depend>



<!-- Declares ROS2 package name that is needed as part of some build interface it exports -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
